--- a/dlna-helper/build.gradle
+++ b/dlna-helper/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "cn.oasdk.dlna"
@@ -10,7 +9,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         ndk {abiFilters "armeabi", "armeabi-v7a", "x86", "mips"    }
 
     }
