--- a/fileview/build.gradle
+++ b/fileview/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "cn.oasdk.fileview"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,11 +20,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation project(path: ':ui')
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
+    implementation 'com.danikula:videocache:2.7.1'
+    api project(path: ':ui')
 }
