--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 android.injected.testOnly=false
 #腾讯tbs插件
 Android.useDeprecatedNdk=true
+android.useAndroidX=true
+android.enableJetifier=true
 
 #不升级androidX
 #android.useAndroidX=true
