--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -2,15 +2,14 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "26.0.0"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion 14
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
     buildTypes {
@@ -25,13 +24,13 @@ android {
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':http')
-    compile 'com.alibaba:fastjson:1.2.44'
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile ("com.github.bumptech.glide:glide:4.8.0") {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    api project(':http')
+    implementation 'com.alibaba:fastjson:1.2.44'
+    api 'androidx.appcompat:appcompat:1.0.0'
+    implementation ("com.github.bumptech.glide:glide:4.8.0") {
         exclude group: "com.android.support"
     }
-    compile "com.android.support:support-fragment:26.1.0"
+    implementation 'androidx.fragment:fragment:1.0.0'
     //颜色选择器
 }
