--- a/fileview/src/main/AndroidManifest.xml
+++ b/fileview/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name="cn.oasdk.webview.WebAddCollectAct">
 
         </activity>
+        <activity android:name="cn.oasdk.webview.SettingAct">
+
+        </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
