--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -32,5 +32,6 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation 'androidx.fragment:fragment:1.0.0'
-    //颜色选择器
+    //状态栏
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
