--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cn.oasdk">
+    package="cn.oasdk"
+    >
 
     <!-- 数据读写权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -35,16 +36,21 @@
     <!-- 位置 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+
+
+    <uses-permission android:name="com.gzpykj.rcms.app" />
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
     <application
-         android:allowBackup="true"
+        android:allowBackup="true"
         android:icon="@mipmap/icon_mao"
         android:label="@string/app_name"
         android:theme="@style/appTheme"
         android:usesCleartextTraffic="true"
-    android:name=".base.AppContext"
+        android:name=".base.AppContext"
        >
         <activity android:name=".MainActivity">
          <!--  <intent-filter>
